@@ -9,6 +9,7 @@ clearcasebootstrapper=net.sourceforge.cruisecontrol.bootstrappers.ClearCaseBoots
 cmsynergybootstrapper=net.sourceforge.cruisecontrol.bootstrappers.CMSynergyBootstrapper
 currentbuildstatusbootstrapper=net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusBootstrapper
 cvsbootstrapper=net.sourceforge.cruisecontrol.bootstrappers.CVSBootstrapper
+lockfilebootstrapper=net.sourceforge.cruisecontrol.bootstrappers.LockFileBootstrapper
 p4bootstrapper=net.sourceforge.cruisecontrol.bootstrappers.P4Bootstrapper
 snapshotcmbootstrapper=net.sourceforge.cruisecontrol.bootstrappers.SnapshotCMBootstrapper
 surroundbootstrapper=net.sourceforge.cruisecontrol.bootstrappers.SSCMBootstrapper
@@ -80,6 +81,7 @@ currentbuildstatuslistener=net.sourceforge.cruisecontrol.listeners.CurrentBuildS
 currentbuildstatusftplistener=net.sourceforge.cruisecontrol.listeners.CurrentBuildStatusFTPListener
 currentbuildstatuspagelistener=net.sourceforge.cruisecontrol.listeners.CurrentBuildStatusPageListener
 cmsynergysessionmonitor=net.sourceforge.cruisecontrol.listeners.CMSynergySessionMonitor
+lockfilelistener=net.sourceforge.cruisecontrol.listeners.LockFileListener
 
 # project structure
 project=net.sourceforge.cruisecontrol.ProjectConfig
